export interface Guest {
  id: number;
  first_name: string;
  last_name: string;
  email: string;
  nationality: string;
  notes: string;
}
