// Bleiche Resort & Spa — Database Schema (DBML)
// This file must always reflect the current database structure.
// Update it whenever migrations change the schema.

Project bleiche_hotel {
  database_type: 'PostgreSQL'
  Note: 'Hotel management system for Bleiche Resort & Spa, Spreewald'
}

Enum employeerole {
  manager
  receptionist
  housekeeper
  spa_therapist
  chef
  waiter
  concierge
  maintenance
  admin
}

Enum salutation {
  Herr
  Frau
  Familie
}

Enum offerstatus {
  draft
  sent
  accepted
  declined
}

Table employees {
    id                    integer      [pk, increment]
    first_name            varchar(100) [not null]
    last_name             varchar(100) [not null]
    email                 varchar(255) [not null, unique, note: 'indexed']
    phone                 varchar(30)
    role                  employeerole [not null]
    department            varchar(100)
    position              varchar(150)
    employment_started_on date
    employment_ended_on   date
    active                boolean      [not null, default: true]
    notes                 text
    created_at            timestamptz  [default: `now()`]
    updated_at            timestamptz  [default: `now()`]
}

Table users {
    id                        integer      [pk, increment]
    username                  varchar(100) [not null, unique, note: 'indexed']
    password_hash             varchar(255) [not null]
    role                      employeerole [not null]
    employee_id               integer
    is_active                 boolean      [not null, default: true]
    must_change_password      boolean      [not null, default: false]
    tokens_invalidated_before timestamptz
    created_at                timestamptz  [default: `now()`]
    updated_at                timestamptz  [default: `now()`]
}

Table guests {
    id            integer      [pk, increment]
    first_name    varchar(100) [not null]
    last_name     varchar(100) [not null]
    email         varchar(255) [not null, unique, note: 'indexed']
    phone         varchar(30)
    date_of_birth date
    address       text
    nationality   varchar(100)
    notes         text
    created_at    timestamptz  [default: `now()`]
    updated_at    timestamptz  [default: `now()`]
}

Table offers {
    id                   integer      [pk, increment]
    salutation           salutation   [not null]
    first_name           varchar(100) [not null, default: '']
    last_name            varchar(100) [not null, default: '']
    street               varchar(255) [not null, default: '']
    zip_code             varchar(20)  [not null, default: '']
    city                 varchar(100) [not null, default: '']
    email                varchar(255) [not null, default: '']
    offer_date           date
    arrival_date         date
    departure_date       date
    room_category        varchar(100) [not null, default: '']
    custom_room_category varchar(255) [not null, default: '']
    adults               integer      [not null, default: 2]
    children_ages        integer[]    [not null, default: `'{}'`]
    price_per_night      varchar(50)  [not null, default: '']
    total_price          varchar(50)  [not null, default: '']
    employee_name        varchar(200) [not null, default: '']
    notes                text         [not null, default: '']
    status               offerstatus  [not null, default: 'draft']
    created_at           timestamptz  [default: `now()`]
    updated_at           timestamptz  [default: `now()`]
}

Table daily_briefings {
    id         integer     [pk, increment]
    date       date        [not null, unique]
    data       jsonb       [not null]
    created_at timestamptz [default: `now()`]
    updated_at timestamptz [default: `now()`]
}

Table staff_members {
    id         integer      [pk, increment]
    name       varchar(200) [not null, unique]
    created_at timestamptz  [default: `now()`]
}

Table rooms {
    number   varchar(10) [pk]
    category varchar(20) [not null]
    floor    varchar(20) [not null]
}

Table conversations {
    id             integer     [pk, increment]
    user_id        integer     [not null, note: 'indexed']
    title          varchar(200) [not null, default: '']
    created_at     timestamptz [not null, default: `now()`]
    last_active_at timestamptz [not null, default: `now()`]
}

Table conversation_messages {
    id                 integer     [pk, increment]
    conversation_id    integer     [not null, note: 'indexed']
    role               varchar(16) [not null, note: 'user | assistant | tool']
    content            text        [not null, default: '']
    tool_call_id       varchar(80)
    tool_name          varchar(80)
    tool_calls         jsonb
    refs               jsonb
    prompt_tokens      integer     [not null, default: 0]
    completion_tokens  integer     [not null, default: 0]
    cost_micro_cents   integer     [not null, default: 0]
    model              varchar(80)
    created_at         timestamptz [not null, default: `now()`]

    indexes {
        (conversation_id, created_at) [name: 'ix_conv_msg_conv_created']
    }
}

Enum calendareventtype {
  shift
  meeting
  maintenance
  holiday
  training
  personal
  reminder
  other
}

Enum calendaraudiencescope {
  global
  role
  users
}

Enum calendarparticipantrole {
  organizer
  attendee
  observer
}

Enum calendarparticipantstatus {
  needs_action
  accepted
  declined
  tentative
}

Enum calendarexceptiontype {
  cancelled
  modified
}

Table calendar_events {
    id                  integer                [pk, increment]
    title               varchar(200)           [not null]
    description         text
    event_type          calendareventtype      [not null, default: 'other']
    starts_at           timestamptz            [not null]
    ends_at             timestamptz
    is_all_day          boolean                [not null, default: false]
    recurrence_rule     text                   [note: 'RFC 5545 RRULE; application-layer expansion']
    recurrence_end_at   timestamptz
    audience_scope      calendaraudiencescope  [not null, default: 'users']
    visible_to_roles    "employeerole[]"       [note: 'used when audience_scope=role']
    location            varchar(200)
    created_by_user_id  integer
    created_at          timestamptz            [not null, default: `now()`]
    updated_at          timestamptz            [not null, default: `now()`]

    indexes {
        starts_at                 [name: 'ix_calendar_events_starts_at']
        (event_type, starts_at)   [name: 'ix_calendar_events_type_starts_at']
        created_by_user_id        [name: 'ix_calendar_events_created_by']
    }
}

Table calendar_event_participants {
    event_id        integer                    [not null]
    user_id         integer                    [not null]
    role            calendarparticipantrole    [not null, default: 'attendee']
    response_status calendarparticipantstatus  [not null, default: 'needs_action']

    indexes {
        (event_id, user_id) [pk]
        user_id             [name: 'ix_calendar_participants_user']
    }
}

Table calendar_event_exceptions {
    id                    integer                [pk, increment]
    event_id              integer                [not null]
    occurrence_at         timestamptz            [not null]
    exception_type        calendarexceptiontype  [not null]
    override_starts_at    timestamptz
    override_ends_at      timestamptz
    override_title        varchar(200)
    override_description  text
    reason                text
    created_at            timestamptz            [not null, default: `now()`]
    updated_at            timestamptz            [not null, default: `now()`]

    indexes {
        (event_id, occurrence_at) [unique, name: 'uq_calendar_exceptions_event_occurrence']
    }
}

Enum invoicestatus {
  open
  finalized
  voided
}

Enum invoicevenue {
  reception
  restaurant
  spa
  other
}

Enum paymentmethod {
  cash
  card
  bank_transfer
  room_charge
  other
}

Enum productcategory {
  accommodation
  food
  beverage
  spa
  misc
}

Table cashier_products {
    id                integer          [pk, increment]
    sku               varchar(50)      [unique]
    name              varchar(200)     [not null]
    category          productcategory  [not null, default: 'misc']
    venue             invoicevenue     [not null, default: 'other']
    unit_price_cents  integer          [not null, note: 'VAT-inclusive']
    vat_rate_bp       integer          [not null, note: '700 = 7.00%, 1900 = 19.00%']
    active            boolean          [not null, default: true]
    created_at        timestamptz      [not null, default: `now()`]
    updated_at        timestamptz      [not null, default: `now()`]
}

Table cashier_invoices {
    id                 integer        [pk, increment]
    number             varchar(32)    [unique, note: 'YYYYMMDD-NNNN']
    status             invoicestatus  [not null, default: 'open']
    venue              invoicevenue   [not null, default: 'other']
    reference          varchar(200)
    payment_method     paymentmethod
    cashier_user_id    integer
    guest_id           integer
    notes              text
    subtotal_cents     integer        [not null, default: 0]
    vat_total_cents    integer        [not null, default: 0]
    total_cents        integer        [not null, default: 0]
    currency           varchar(3)     [not null, default: 'EUR']
    finalized_at       timestamptz
    created_at         timestamptz    [not null, default: `now()`]
    updated_at         timestamptz    [not null, default: `now()`]

    indexes {
        (status, created_at) [name: 'ix_cashier_invoices_status_created']
        (venue, created_at)  [name: 'ix_cashier_invoices_venue_created']
    }
}

Table cashier_invoice_items {
    id                integer     [pk, increment]
    invoice_id        integer     [not null]
    product_id        integer
    description       varchar(255) [not null]
    quantity          decimal(10,3) [not null, default: 1]
    unit_price_cents  integer     [not null]
    vat_rate_bp       integer     [not null]
    line_total_cents  integer     [not null]
    line_vat_cents    integer     [not null]

    indexes {
        invoice_id [name: 'ix_cashier_items_invoice']
    }
}

Table cashier_receipts {
    id                       integer      [pk, increment]
    invoice_id               integer      [not null, unique]
    provider                 varchar(32)  [not null]
    provider_tss_id          varchar(80)
    provider_client_id       varchar(80)
    provider_transaction_id  varchar(80)
    transaction_number       integer
    signature_counter        integer
    qr_code_data             text
    signature_value          text
    signature_algorithm      varchar(80)
    time_start               timestamptz
    time_end                 timestamptz
    raw_response             text
    created_at               timestamptz  [not null, default: `now()`]
}

Ref: users.employee_id > employees.id
Ref: conversations.user_id > users.id [delete: cascade]
Ref: conversation_messages.conversation_id > conversations.id [delete: cascade]
Ref: calendar_events.created_by_user_id > users.id [delete: set null]
Ref: calendar_event_participants.event_id > calendar_events.id [delete: cascade]
Ref: calendar_event_participants.user_id > users.id [delete: cascade]
Ref: calendar_event_exceptions.event_id > calendar_events.id [delete: cascade]
Ref: cashier_invoices.cashier_user_id > users.id [delete: set null]
Ref: cashier_invoices.guest_id > guests.id [delete: set null]
Ref: cashier_invoice_items.invoice_id > cashier_invoices.id [delete: cascade]
Ref: cashier_invoice_items.product_id > cashier_products.id [delete: set null]
Ref: cashier_receipts.invoice_id > cashier_invoices.id [delete: cascade]

// ── Locations, maps, polygons ──────────────────────────────────────────────

Table locations {
    id            integer      [pk, increment]
    parent_id     integer      [null, note: 'self-FK; ON DELETE RESTRICT']
    source_id     varchar(64)  [unique, note: 'external UUID — JSON imports keep identity across DBs']
    name          varchar(200) [not null]
    description   text
    environment   varchar(16)  [not null, default: 'indoor', note: 'indoor | outdoor']
    category      varchar(32)  [not null, default: 'room', note: 'building | floor | room (extensible; validated in Pydantic)']
    room_number   varchar(64)  [note: 'free-form room label, e.g. "0.30", "1.604"']
    sort_order    integer      [not null, default: 0]
    created_at    timestamptz  [not null, default: `now()`]
    updated_at    timestamptz  [not null, default: `now()`]

    indexes {
        parent_id
        source_id [unique]
    }
}

Table maps {
    id            integer      [pk, increment]
    name          varchar(200) [not null]
    description   text
    sort_order    integer      [not null, default: 0]
    created_at    timestamptz  [not null, default: `now()`]
    updated_at    timestamptz  [not null, default: `now()`]
}

Table map_layers {
    id            integer      [pk, increment]
    map_id        integer      [not null]
    name          varchar(200) [not null]
    image_url     varchar(500) [note: 'one of image_url / svg_content must be set']
    svg_content   text
    width         integer      [not null]
    height        integer      [not null]
    sort_order    integer      [not null, default: 0]
    created_at    timestamptz  [not null, default: `now()`]
    updated_at    timestamptz  [not null, default: `now()`]

    indexes {
        map_id
    }
}

Table location_shapes {
    id            integer      [pk, increment]
    location_id   integer      [not null]
    layer_id      integer      [not null]
    points        jsonb        [not null, note: '[[x,y], [x,y], …] in layer native coords']
    style         jsonb        [note: '{fill, stroke, opacity} overrides']
    label         varchar(200)
    created_at    timestamptz  [not null, default: `now()`]
    updated_at    timestamptz  [not null, default: `now()`]

    indexes {
        location_id
        layer_id
    }
}

Ref: locations.parent_id > locations.id [delete: restrict]
Ref: map_layers.map_id > maps.id [delete: cascade]
Ref: location_shapes.location_id > locations.id [delete: cascade]
Ref: location_shapes.layer_id > map_layers.id [delete: cascade]

//[[vibebase.{"positions":{"employees":{"x":60,"y":60},"guests":{"x":60,"y":320},"offers":{"x":460,"y":60},"daily_briefings":{"x":460,"y":300},"users":{"x":60,"y":620},"staff_members":{"x":460,"y":600},"rooms":{"x":760,"y":60}},"preferences":{"colorScheme":"default","showNotes":true,"showIndexes":true,"showTypes":true,"snapToGrid":true,"gridSize":20},"viewport":{"x":93.21053136610232,"y":15.624702665930954,"zoom":0.6240726250000023},"collapsed":{}}]]
